Shenandoah: tune down ShenandoahGarbageThreshold

XMLWordPrintable

    • gc
    • b18

        ShenandoahGarbageThreshold drives the collection set selection. It defaults to 60%, which means we can end up with regions that have 60% garbage that would not be collected until the memory is tight. This means that Shenandoah accepts 60% heap fragmentation in normal conditions: so, for the live data of 20GB, it might require the heap of 33GB.

        Instead, we are better off defragmenting the heap more proactively by lowering the ShenandoahGarbageThreshold.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: