8242042: Shenandoah: tune down ShenandoahGarbageThreshold

Reviewed-by: rkennke