src/hotspot/share/gc/shenandoah/shenandoah_globals.hpp
@@ -94,11 +94,12 @@
           "GC cycles, as degenerated and full GCs would try to unload "     \
           "classes regardless. Set to zero to disable class unloading.")    \
                                                                             \
-  experimental(uintx, ShenandoahGarbageThreshold, 60,                       \
+  experimental(uintx, ShenandoahGarbageThreshold, 25,                       \
           "How much garbage a region has to contain before it would be "    \
-          "taken for collection. This a guideline only , as GC heuristics " \
+          "taken for collection. This a guideline only, as GC heuristics "  \
           "may select the region for collection even if it has little "     \
-          "garbage. In percents of heap region size.")                      \
+          "garbage. This also affects how much internal fragmentation the " \
+          "collector accepts. In percents of heap region size.")            \
           range(0,100)                                                      \
                                                                             \
   experimental(uintx, ShenandoahInitFreeThreshold, 70,                      \
